Createdform section and integrated new icon system,

--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@transmart/cli": "^0.2.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "lucide-react": "^0.277.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.10.0",
     "react-spring": "^9.7.3",
     "tailwind-merge": "^1.14.0",
