--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.10.0",
     "react-spring": "^9.7.3",
     "tailwind-merge": "^1.14.0",
